<resources>
    <string name="app_name">Geofence</string>

    <!--MainActivity-->
    <string name="label_status">Status:</string>
    <string name="label_geofence_parameters">Geofence parameters:</string>
    <string name="label_radius">Radius (meters)</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>

    <string name="hint_latitude">-90..90</string>
    <string name="hint_longitude">-180..180</string>

    <string name="btn_apply">Apply</string>

    <string name="snackbar_geofence_info">"Set geofence area: Lat : %.4f,   Lon:%.4f \nRadius : %.2f m."</string>
    <string name="snackbar_fill_all_fields">Please fill in all fields</string>
    <string name="snackbar_geofence_add_error">Geofence not added</string>

    <!--Permissions-->
    <string name="snackbar_message_enable_location_access">Please enable latitude access in settings for accurate work of application</string>
    <string name="snackbar_btn_settings">Settings</string>

    <!--Notification-->
    <string name="notification_text_return_to_app">Click notification to return to app</string>
    <string name="label_wifi_name">WiFi network</string>

    <!--Errors-->
    <string name="error_geofence_not_available">Geofence service is not available now</string>
    <string name="error_geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="error_geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call</string>
    <string name="error_geofence_unknown">Unknown error: the Geofence service is not available now</string>

    <!--geofence area status-->
    <string name="status_inside">inside</string>
    <string name="status_outside">outside</string>
    <string name="status_na">NA</string>
</resources>
