<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.artem.geofence.activity.MainActivity"
    tools:ignore="RtlCompat"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_geofence_parameters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLabelLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_latitude"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewLabelLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_longitude"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextLongitude"
        app:layout_constraintTop_toTopOf="@+id/textViewLabelLatitude" />

    <TextView
        android:id="@+id/textViewLabelRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_radius"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextRadius"
        app:layout_constraintTop_toTopOf="@+id/textViewLabelLongitude" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/hint_latitude"
        android:inputType="numberDecimal"
        android:text="50.0"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextLongitude"
        app:layout_constraintEnd_toStartOf="@+id/editTextLongitude"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_longitude"
        android:inputType="numberDecimal"
        android:text="30.0"
        app:layout_constraintEnd_toStartOf="@+id/editTextRadius"
        app:layout_constraintStart_toEndOf="@+id/editTextLatitude"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelLatitude" />

    <EditText
        android:id="@+id/editTextRadius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="100"
        app:layout_constraintBaseline_toBaselineOf="@+id/editTextLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextLongitude" />

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRadius" />

</android.support.constraint.ConstraintLayout>
